[gd_scene load_steps=2 format=3 uid="uid://ckgvddqjc2gmo"]

[ext_resource type="Script" uid="uid://6lp3sqgw4knj" path="res://scripts/ToolView.gd" id="1"]

[node name="ToolsView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ship Tools"

[node name="ToolButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="btn_compass" type="Button" parent="MarginContainer/VBoxContainer/ToolButtons"]
layout_mode = 2
text = "Compass"

[node name="btn_map" type="Button" parent="MarginContainer/VBoxContainer/ToolButtons"]
layout_mode = 2
text = "Map"

[node name="btn_spyglass" type="Button" parent="MarginContainer/VBoxContainer/ToolButtons"]
layout_mode = 2
text = "Spyglass"

[node name="btn_mushi" type="Button" parent="MarginContainer/VBoxContainer/ToolButtons"]
layout_mode = 2
text = "Den Den Mushi"

[node name="btn_logpose" type="Button" parent="MarginContainer/VBoxContainer/ToolButtons"]
layout_mode = 2
text = "Log Pose"

[node name="ToolInfo" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Select a tool."
